# videocutandcompress

./: .gitignore  CMakeLists.txt  README.md
src/: app.rc  main.cpp  resources.qrc
